--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
   <!-- <link rel="stylesheet" href="https://fonts.googleapis.com">-->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="index.css">
 
   <title>Frontend Mentor | QR code component</title>
@@ -16,7 +16,7 @@
 
 <div class="frame">
   <div class="child" id="img">
-    <img src="images/image-qr-code.png" height="250px" width="240px" style="border-radius: 10px">
+    <img src="image-qr-code.png" height="250px" width="240px" style="border-radius: 10px">
    
   </div> <!--used div inorder to center align the pic -->
 
